translate to russian

--- a/MyHouse/Views/Home/Privacy.cshtml
+++ b/MyHouse/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Об сайте";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>На данном сайте вы можете узнать кто живёт в вами указаной квартире, их номера телефонов также небольшую информацию.</p>
