--- a/MyHouse/Views/Home/Privacy.cshtml
+++ b/MyHouse/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>На данном сайте вы можете узнать кто живёт в вами указаной квартире, их номера телефонов также небольшую информацию.</p>
+<p>На данном сайте вы можете узнать кто живёт в вами указаной квартире.</p>
