--- a/MyHouse/Views/Home/Index.cshtml
+++ b/MyHouse/Views/Home/Index.cshtml
@@ -4,5 +4,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Добро пожаловать!</h1>
-    <p>@Model</p>
+    <details>
+        <summary>
+            Презинтация
+        </summary>
+        Краткое описание возможностей программы должно быть тут.
+    </details>
 </div>
